# mandelbrot-wasm

./: Cargo.toml  build.sh  index.html  main.js  styles.css
assets/: quad.fs copy.glsl  quad.fs.glsl  quad.vs.glsl
pkg/: index.html  lab1-gl.d.ts  lab1-gl.js  lab1-gl_bg.wasm  lab1-gl_bg.wasm.d.ts  mandelbrot-wasm.d.ts  mandelbrot-wasm.js  mandelbrot-wasm_bg.wasm.d.ts
src/: d.rs  f.rs  main.rs  matrix.rs  vector.rs  w.rs
